# DietTracker

./: .gitignore  README.md  activity_store.py  add_meal.py  app.py  meal_estimator.py  meal_log_builder.py  meal_store.py  plan.md  prompts.py  pyproject.toml  schemas.py  telegram_bot.py
data/: daily_activity.json
diettracker/: config.py  paths.py
diettracker/app/: dashboard_ui.py  formatters.py  meal_ui.py  mood_ui.py  streamlit_app.py  wellness_ui.py
diettracker/domain/: meal_builder.py  metrics.py  models.py
diettracker/services/: meal_estimator.py  mood_parser.py  prompts.py
diettracker/stores/: base.py  daily_store.py  meal_store.py  mood_store.py
