[project]
name = "diettracker"
version = "0.1.0"
description = "Local Streamlit meal tracker with OpenAI-based calorie estimation"
requires-python = ">=3.13"
dependencies = [
    "filelock>=3.29.6",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "streamlit>=1.58.0",
]
